--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@nrwl/angular": "^17.2.5",
+    "apexcharts": "^3.45.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
+    "ng-apexcharts": "^1.8.0",
     "ng-event-bus": "^6.0.0",
+    "ng2-charts": "^5.0.4",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
